# OpenRCT2-RideGenerator

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build-plugin.yml
examples/cli/building/: 3d_cinema.yaml  circus.yaml  crooked_house.yaml  enterprise.yaml  ferris_wheel.yaml  haunted_house.yaml  materials.mtl  merry_go_round.yaml  motion_simulator.yaml  space_rings.yaml  swinging_ship.yaml  twist.yaml
examples/cli/stall/: balloon.yaml  burger_bar.yaml  cash_machine.yaml  drinks_stand.yaml  first_aid.yaml  information_kiosk.yaml  materials.mtl  souvenir_shop.yaml  toilets.yaml
openrct2_ride_generator/: __init__.py  __main__.py  _ride_metadata.py  constants.py  exporter.py  loader.py  sprite_renderer.py  types.py
ride_renderer_addon/: __init__.py  blender_manifest.toml  operators.py  panels.py  props.py  scene_to_stall.py
scripts/: _buildlib.py  build_plugin_local.py  collect_wheels.py  extract_ride_metadata.py  gen_example_meshes.py
scripts/ci/: set_version.py
tests/: test_exporter.py  test_loader.py  test_main.py  test_sprite_renderer.py
