[project]
name = "OpenRCT2-RideGenerator"
version = "0.1.0"
description = "Author and export OpenRCT2 stall and facility ride objects from meshes"
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
authors = [
    { name = "Alex Parisi", email = "alex@atparisi.com" }
]
dependencies = [
    "OpenRCT2-ObjectCommon>=0.2.5",
    "openrct2-x7-renderer>=0.3.9",
    "numpy>=1.26",
    "pillow>=10.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/alex-parisi/OpenRCT2-RideGenerator"
Repository = "https://github.com/alex-parisi/OpenRCT2-RideGenerator"

[project.scripts]
openrct2-ride-generator = "openrct2_ride_generator.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
    "ruff>=0.5",
    "yamllint>=1.35",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=openrct2_ride_generator"

[tool.coverage.run]
source = ["openrct2_ride_generator"]

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["openrct2_ride_generator", "scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W", "N"]

[tool.ruff.lint.per-file-ignores]
"ride_renderer_addon/*" = ["N801", "N802", "N806"]

[tool.mypy]
python_version = "3.11"
files = ["openrct2_ride_generator"]
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["openrct2_ride_generator"]
